--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 remote_theme: daattali/beautiful-jekyll
+
+navbar-links:
+  About Me: "aboutme"
+  Resources:
+    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Learn markdown: "https://www.markdowntutorial.com/"
+  Author's home: "https://deanattali.com"
