--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ navbar-links:
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
 
-theme: jekyll-theme-minimal
+remote_theme: daattali/beautiful-jekyll
 
